--- a/.env
+++ b/.env
@@ -36,5 +36,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://7c028f4502a252:d2c1f60b03e2a9@sandbox.smtp.mailtrap.io:2525/?encryption=ssl&auth_mode=login
+MAILER_DSN=gmail://yhhhgtub@gmail.com:hxpuopbgwfnfcoev@default?encryption=ssl&auth_mode=login&host=smtp.gmail.com&port=465
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
