--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,5 +1,4 @@
 framework:
     mailer:
-        transports:
-            main: '%env(MAILER_DSN)%'
-
+        dsn: '%env(MAILER_DSN)%'
+        message_bus: false
